antlr/generated/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "','", "'='", "'.'", "'if'", 
                     "'then'", "'end'", "'else'", "'foreach'", "'in'", "'do'", 
                     "'for'", "'add'", "'('", "')'", "'return'", "'<>'", 
                     "'<'", "'<='", "'>'", "'>='", "'{'", "'}'", "'['", 
                     "']'", "'get'", "'*'", "'/'", "'+'", "'-'", "'and'", 
                     "'or'", "'true'", "'false'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MUL", "DIV", 
                      "ADD", "SUB", "AND", "OR", "TRUE", "FALSE", "NOT", 
                      "ID", "INT", "STRING", "NEWLINE", "LINE_COMMENT", 
                      "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_defStat = 2
    RULE_variable = 3
    RULE_assignStat = 4
    RULE_assignNode = 5
    RULE_ifStat = 6
    RULE_elseStat = 7
    RULE_foreachStat = 8
    RULE_forStat = 9
    RULE_addFunction = 10
    RULE_returnStat = 11
    RULE_booleanExp = 12
    RULE_arithmeticExp = 13
    RULE_node = 14
    RULE_objectNode = 15
    RULE_listNode = 16
    RULE_getFunction = 17
    RULE_nodeReference = 18
    RULE_withPredicate = 19
    RULE_booleanValue = 20

    ruleNames =  [ "prog", "stat", "defStat", "variable", "assignStat", 
                   "assignNode", "ifStat", "elseStat", "foreachStat", "forStat", 
                   "addFunction", "returnStat", "booleanExp", "arithmeticExp", 
                   "node", "objectNode", "listNode", "getFunction", "nodeReference", 
                   "withPredicate", "booleanValue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    MUL=27
    DIV=28
    ADD=29
    SUB=30
    AND=31
    OR=32
    TRUE=33
    FALSE=34
    NOT=35
    ID=36
    INT=37
    STRING=38
    NEWLINE=39
    LINE_COMMENT=40
    COMMENT=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.stat()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 68719555106) != 0)):
                    break

            self.state = 47
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defStat(self):
            return self.getTypedRuleContext(ExprParser.DefStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(ExprParser.ReturnStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(ExprParser.AssignStatContext,0)


        def ifStat(self):
            return self.getTypedRuleContext(ExprParser.IfStatContext,0)


        def foreachStat(self):
            return self.getTypedRuleContext(ExprParser.ForeachStatContext,0)


        def forStat(self):
            return self.getTypedRuleContext(ExprParser.ForStatContext,0)


        def addFunction(self):
            return self.getTypedRuleContext(ExprParser.AddFunctionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = ExprParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.defStat()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.returnStat()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.assignStat()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.ifStat()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.foreachStat()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.forStat()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.addFunction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.VariableContext)
            else:
                return self.getTypedRuleContext(ExprParser.VariableContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_defStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefStat" ):
                return visitor.visitDefStat(self)
            else:
                return visitor.visitChildren(self)




    def defStat(self):

        localctx = ExprParser.DefStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ExprParser.T__0)
            self.state = 59
            self.variable()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 60
                self.match(ExprParser.T__1)
                self.state = 61
                self.variable()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def booleanExp(self):
            return self.getTypedRuleContext(ExprParser.BooleanExpContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = ExprParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(ExprParser.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 68
                self.match(ExprParser.T__2)
                self.state = 69
                self.booleanExp(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignNode(self):
            return self.getTypedRuleContext(ExprParser.AssignNodeContext,0)


        def booleanExp(self):
            return self.getTypedRuleContext(ExprParser.BooleanExpContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assignStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)




    def assignStat(self):

        localctx = ExprParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.assignNode()
            self.state = 73
            self.match(ExprParser.T__2)
            self.state = 74
            self.booleanExp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignNodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def getRuleIndex(self):
            return ExprParser.RULE_assignNode

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignNode" ):
                return visitor.visitAssignNode(self)
            else:
                return visitor.visitChildren(self)




    def assignNode(self):

        localctx = ExprParser.AssignNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignNode)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ExprParser.ID)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 77
                self.match(ExprParser.T__3)
                self.state = 78
                self.match(ExprParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExp(self):
            return self.getTypedRuleContext(ExprParser.BooleanExpContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def elseStat(self):
            return self.getTypedRuleContext(ExprParser.ElseStatContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_ifStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = ExprParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ExprParser.T__4)
            self.state = 82
            self.booleanExp(0)
            self.state = 83
            self.match(ExprParser.T__5)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.stat()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 68719555106) != 0)):
                    break

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 89
                self.elseStat()


            self.state = 92
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_elseStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStat" ):
                return visitor.visitElseStat(self)
            else:
                return visitor.visitChildren(self)




    def elseStat(self):

        localctx = ExprParser.ElseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ExprParser.T__7)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 95
                self.stat()
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 68719555106) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForeachStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def nodeReference(self):
            return self.getTypedRuleContext(ExprParser.NodeReferenceContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_foreachStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachStat" ):
                return visitor.visitForeachStat(self)
            else:
                return visitor.visitChildren(self)




    def foreachStat(self):

        localctx = ExprParser.ForeachStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_foreachStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ExprParser.T__8)
            self.state = 101
            self.match(ExprParser.ID)
            self.state = 102
            self.match(ExprParser.T__9)
            self.state = 103
            self.nodeReference()
            self.state = 104
            self.match(ExprParser.T__10)
            self.state = 106 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 105
                self.stat()
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 68719555106) != 0)):
                    break

            self.state = 110
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_forStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)




    def forStat(self):

        localctx = ExprParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ExprParser.T__11)
            self.state = 113
            self.match(ExprParser.ID)
            self.state = 114
            self.match(ExprParser.T__9)
            self.state = 115
            self.match(ExprParser.INT)
            self.state = 116
            self.match(ExprParser.T__10)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.stat()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 68719555106) != 0)):
                    break

            self.state = 122
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def node(self):
            return self.getTypedRuleContext(ExprParser.NodeContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_addFunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddFunction" ):
                return visitor.visitAddFunction(self)
            else:
                return visitor.visitChildren(self)




    def addFunction(self):

        localctx = ExprParser.AddFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_addFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ExprParser.T__12)
            self.state = 125
            self.match(ExprParser.T__13)
            self.state = 126
            self.match(ExprParser.ID)
            self.state = 127
            self.match(ExprParser.T__1)
            self.state = 128
            self.node()
            self.state = 129
            self.match(ExprParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExp(self):
            return self.getTypedRuleContext(ExprParser.BooleanExpContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_returnStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)




    def returnStat(self):

        localctx = ExprParser.ReturnStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ExprParser.T__15)
            self.state = 132
            self.booleanExp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_booleanExp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParenBooleanContext(BooleanExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BooleanExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExp(self):
            return self.getTypedRuleContext(ExprParser.BooleanExpContext,0)

        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenBoolean" ):
                return visitor.visitParenBoolean(self)
            else:
                return visitor.visitChildren(self)


    class BooleanArithmeticContext(BooleanExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BooleanExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExp(self):
            return self.getTypedRuleContext(ExprParser.ArithmeticExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanArithmetic" ):
                return visitor.visitBooleanArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExpContext(BooleanExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BooleanExpContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def booleanExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.BooleanExpContext)
            else:
                return self.getTypedRuleContext(ExprParser.BooleanExpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExp" ):
                return visitor.visitRelationalExp(self)
            else:
                return visitor.visitChildren(self)


    class LogicalExpContext(BooleanExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BooleanExpContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def booleanExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.BooleanExpContext)
            else:
                return self.getTypedRuleContext(ExprParser.BooleanExpContext,i)

        def AND(self):
            return self.getToken(ExprParser.AND, 0)
        def OR(self):
            return self.getToken(ExprParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExp" ):
                return visitor.visitLogicalExp(self)
            else:
                return visitor.visitChildren(self)



    def booleanExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.BooleanExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_booleanExp, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = ExprParser.ParenBooleanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 135
                    self.match(ExprParser.NOT)


                self.state = 138
                self.match(ExprParser.T__13)
                self.state = 139
                self.booleanExp(0)
                self.state = 140
                self.match(ExprParser.T__14)
                pass

            elif la_ == 2:
                localctx = ExprParser.BooleanArithmeticContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 142
                self.arithmeticExp(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 151
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.RelationalExpContext(self, ExprParser.BooleanExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExp)
                        self.state = 145
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 146
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4063240) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 147
                        self.booleanExp(4)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.LogicalExpContext(self, ExprParser.BooleanExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExp)
                        self.state = 148
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 149
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==31 or _la==32):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 150
                        self.booleanExp(3)
                        pass

             
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArithmeticExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_arithmeticExp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArithmeticNodeContext(ArithmeticExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ArithmeticExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def node(self):
            return self.getTypedRuleContext(ExprParser.NodeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticNode" ):
                return visitor.visitArithmeticNode(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ArithmeticExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ArithmeticExpContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def arithmeticExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ArithmeticExpContext)
            else:
                return self.getTypedRuleContext(ExprParser.ArithmeticExpContext,i)

        def MUL(self):
            return self.getToken(ExprParser.MUL, 0)
        def DIV(self):
            return self.getToken(ExprParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ArithmeticExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ArithmeticExpContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def arithmeticExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ArithmeticExpContext)
            else:
                return self.getTypedRuleContext(ExprParser.ArithmeticExpContext,i)

        def ADD(self):
            return self.getToken(ExprParser.ADD, 0)
        def SUB(self):
            return self.getToken(ExprParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)

